[tool.pdm.build]
includes = [
    "git_tools",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Joe Lau", email = "lau.joe.a@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "pretty-errors<2.0.0,>=1.2.25",
    "click<9.0.0,>=8.1.7",
    "tabulate<1.0.0,>=0.9.0",
    "inquirerpy<1.0.0,>=0.3.4",
    "alive-progress<4.0.0,>=3.1.4",
    "inquirer<4.0.0,>=3.2.3",
    "pyfzf<1.0.0,>=0.3.1",
    "ruff>=0.9.1",
    "loguru>=0.7.3",
]
name = "git-tools"
version = "0.1.0"
description = ""
readme = "README.md"
